--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -15,4 +15,5 @@ spring:
         format_sql: true
   flyway:
     enabled: true
+    baseline-on-migrate: true
     locations: classpath:db/migration
