--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -17,3 +17,7 @@ spring:
     enabled: true
     baseline-on-migrate: true
     locations: classpath:db/migration
+
+
+garage:
+  api-url: http://localhost:8080/garage
